fixed projects not displaying on mobile

--- a/browser/scss/a-projects.scss
+++ b/browser/scss/a-projects.scss
@@ -21,6 +21,7 @@ $pastelPink: #FF8EB2;
 projects-mobile {
 	display: none;
 }
+
 #projects {
 	overflow: hidden;
 	position: relative;
@@ -233,6 +234,12 @@ $scrollTime: 1s;
 
 }
 
+// @media (min-width: 1069px){
+// 	body{
+// 		overflow-y: hidden;
+// 	}
+// }
+
 @media (max-width: 1068px) {
 	.skw-page__content {
 		.skw-page__half--left & {
@@ -268,9 +275,15 @@ $scrollTime: 1s;
 	.skw-page {
 		display: none;
 	}
+
+	#projects {
+		overflow-y: scroll;
+		-webkit-overflow-scrolling: touch;
+	}
 	projects-mobile {
+		// overflow-y: scroll;
 		margin: 5% 0% 5% 0%;
-		height: 100%;
+		// height: 100%;
 		display: block;
 
 		h2, h3, a, li {
